fixed round container alignment

--- a/fundamentals/src/stylesheets/Game.css
+++ b/fundamentals/src/stylesheets/Game.css
@@ -2,7 +2,7 @@
 
 .main-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    align-self: center;
 }
 
 .title-container {
